[tool.poetry]
name = "liner"
version = "0.1.0"
description = "Generate a fingerprint for your source code."
authors = ["finnkauski <iwiivi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1.3"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
liner = 'liner:main'

[tool.dephell.main]
from = {format = "pyproject.toml", path = "pyproject.toml"}
to = {format = "setup.py", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

